--- a/editor/src/Components/Matrix3x3/index.css
+++ b/editor/src/Components/Matrix3x3/index.css
@@ -4,12 +4,65 @@
 }
 
 .inline2 { 
-    display: inline-table;
-    text-align: center;
-    padding: flex;
-    height:100px;
-    border-spacing: 10px;
-    vertical-align: middle;
+    height: 50px;
+    width: 5%;
+    background: LightGray;
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto 1fr;  
+    grid-gap: 10px;
+}
+
+.inline2 > span{  
+    height: 50px;
+    width: 5%;
+    background: LightGray;
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;   
+    grid-gap: 10px;
+}
+
+
+ .inline2 .antonio-Element{  
+    background:LightSkyBlue;
+ 
+
+}
+
+.inline2 .antonio-Element1{ 
+    background:LightSalmon;
+  
+
+}
+
+ .inline2 .antonio-Element2{ 
+    background:PaleTurquoise;
+
+
+}
+
+ .inline2 .antonio-Element3{ 
+    background:LightPink;
+}
+
+.inline2 .inline2 .antonio-Element4{ 
+    background: PaleGreen;
+}
+
+.inline2 .antonio-Element5{ 
+    background-color: blue;   
+
+}
+
+.inline2 .antonio-Element6{ 
+}
+
+.inline2 .antonio-Element7{ 
+}
+
+
+.inline2 .antonio-Element8{ 
 }
 
 .inline3 { 
