Updated CSS for 2x2 and 3x3 Matrices

--- a/editor/src/Components/Matrix2x2 B/index.css
+++ b/editor/src/Components/Matrix2x2 B/index.css
@@ -1,3 +1,7 @@
+.inline { 
+    display: inline-table;  
+    
+}
 
 .inline-2 { 
     flex-basis: 5%;
@@ -7,4 +11,8 @@
     grid-gap: 10px;
     vertical-align: middle;
     justify-content: center;
+}
+
+.inline3 { 
+    display: inline-table;
 }
